refine: remove hardcode tailwind css

--- a/components.json
+++ b/components.json
@@ -11,6 +11,7 @@
   },
   "aliases": {
     "components": "@/framework/components",
-    "utils": "@/framework/lib/utils"
+    "utils": "@/framework/components/lib/utils",
+    "hooks": "@/framework/components/hooks"
   }
 }
