--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@supabase/supabase-js": "^2.38.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "glob": "^11.0.3",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.544.0",
