--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "analyze": "vite-bundle-analyzer"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
