--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "rimraf": "^5.0.5",
+    "supabase": "^2.48.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
