--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "preview": "vite preview",
     "serve": "vite preview --port 4173",
     "clean": "rimraf dist",
-    "type-check": "tsc --noEmit",
     "analyze": "vite-bundle-analyzer"
   },
   "dependencies": {
@@ -73,6 +72,7 @@
     "rimraf": "^5.0.5",
     "supabase": "^2.51.0",
     "tailwindcss": "^3.3.6",
+    "terser": "^5.44.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-bundle-analyzer": "^0.7.0"
